# TupleMaker

./: .clang-format  .codespellrc  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: coverage.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  basic_example.cpp  hades_example.cpp
include/TupleMaker/: TupleMaker.hpp
test/: CMakeLists.txt
test/source/: TupleMaker_test.cpp
